--- a/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/Views/MainView.xaml
+++ b/LesSimpleEfficacesFront/LesSimpleEfficacesFront/LesSimpleEfficacesFront/Views/MainView.xaml
@@ -4,11 +4,24 @@
              x:Class="LesSimpleEfficacesFront.Views.MainView">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="{Binding Hello}"
-                   VerticalOptions="CenterAndExpand" 
+            <Label Text="Menu"
                    HorizontalOptions="CenterAndExpand" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                </Grid.RowDefinitions>
 
-            <Button Text="My Button" Command="{Binding ButtonCommand}" />
+                <Button Grid.Row="0" Text="Parcours" BackgroundColor="#0099ff"  Command="{Binding RoutCommand}" />
+                <Button Grid.Row="1" Text="Mes amis" BackgroundColor="#33cc33" Command="{Binding FriendCommand}" />
+                <Button Grid.Row="2" Text="Mon groupe" BackgroundColor="#00cc99" Command="{Binding GroupCommand}" />
+                <Button Grid.Row="3" Text="Mes statistiques" BackgroundColor="#ff9900" Command="{Binding StatCommand}" />
+                <Button Grid.Row="4" Text="Mon Compte" BackgroundColor="#ff6666" Command="{Binding AccountCommand}" />
+
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
